[gd_scene load_steps=5 format=3 uid="uid://55dbmubt8qa0"]

[ext_resource type="Script" path="res://scripts/card_slot.gd" id="1_qddan"]
[ext_resource type="Texture2D" uid="uid://bue4f8wwsiutv" path="res://assets/cards/slot.png" id="1_w568v"]
[ext_resource type="Texture2D" uid="uid://cmm4p0r7cudfy" path="res://assets/icons/lock-clock.png" id="2_rq6ie"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvxlw"]
size = Vector2(218, 290)

[node name="CardSlot" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 109.0
offset_bottom = 72.0
script = ExtResource("1_qddan")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LockImage" type="Sprite2D" parent="Panel"]
position = Vector2(46, 35)
scale = Vector2(0.203125, 0.203125)
texture = ExtResource("2_rq6ie")

[node name="LockLabel" type="Label" parent="Panel"]
offset_left = 60.0
offset_top = 27.0
offset_right = 100.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "3
"

[node name="CardSlotImage" type="Sprite2D" parent="."]
visible = false
position = Vector2(52.5, 34)
scale = Vector2(0.462555, 0.43871)
texture = ExtResource("1_w568v")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(54.5, 35.75)
scale = Vector2(0.5, 0.25)
shape = SubResource("RectangleShape2D_wvxlw")

[node name="MultLabel" type="Label" parent="."]
offset_left = 6.0
offset_top = 1.0
offset_right = 46.0
offset_bottom = 24.0
text = "2x"

[node name="TypePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Action" type="Node2D" parent="."]

[node name="ActionLabel" type="Label" parent="Action"]
offset_left = 25.0
offset_top = -32.0
offset_right = 77.0
offset_bottom = 2.0
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
